# tylko-cuboids

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  repomix-output.xml  vite.config.ts
lib/wasm-compute/: Cargo.toml  Makefile.toml  repomix-output.xml
lib/wasm-compute/src/: lib.rs
lib/wasm-compute/src/compute/: bounding_box.rs  build_groups.rs  hash_maps.rs  mod.rs  parse_csv.rs  spatial_hash.rs  types.rs
src/: A.csv  main.ts
src/api/: Api.ts  Signal.ts
src/cuboids/: Cuboids.ts  types.ts  worker.ts  workerWasm.ts
src/cuboids/compute/: boundingBox.ts  buildGroups.ts  groupCuboids.ts  parseCsv.ts  spatialHash.ts  unionFind.ts  worker.ts  workerWasm.ts
src/cuboids/compute/otherIdeas.ts/: hashMapsA.ts  hashMapsB.ts
src/gui/: Gui.ts  style.css
src/gui/components/: Dropzone.ts  dropzone.css  dropzone.html
src/gui/components/button/: Button.ts  button.css  button.html
src/gui/components/checkbox/: Checkbox.ts  checkbox.css  checkbox.html
src/gui/components/dropzone/: Dropzone.ts  dropzone.css
src/gui/components/infoBox/: InfoBox.ts  infobox.css  infobox.html
src/lib/wasm-compute/: README.md  package.json  wasm_cuboids.d.ts  wasm_cuboids.js  wasm_cuboids_bg.wasm  wasm_cuboids_bg.wasm.d.ts
src/renderer/: BoxMaterial.ts  MeshManager.ts  Renderer.ts
src/renderer/shaders/: box.frag.glsl  box.vert.glsl
