[package]
name = "wasm-cuboids"
version = "0.1.0"
edition = "2021"
description = "WASM module for cuboid computations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
rustc-hash = "2.1.1"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true

[profile.release.package."*"]
opt-level = 3

[features]
default = ["console_error_panic_hook"]
